// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityGenerator enum with default value [mysql]: mysql-entity-dump-enum-default-value 1`] = `
[
  "import { Entity, Enum, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  [OptionalProps]?: 'type';

  @PrimaryKey()
  id!: number;

  @Property({ length: 100, nullable: true, default: '123' })
  test?: string;

  @Enum({ items: () => Publisher2Type, default: 'local' })
  type: Publisher2Type = Publisher2Type.LOCAL;

  @Enum({ items: () => Publisher2Type2, nullable: true, default: 'LOCAL' })
  type2?: Publisher2Type2 = Publisher2Type2.LOCAL;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}
",
]
`;

exports[`EntityGenerator enum with default value [postgres]: postgres-entity-dump-enum-default-value 1`] = `
[
  "import { Entity, Enum, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  [OptionalProps]?: 'type';

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true, default: '123' })
  test?: string;

  @Enum({ items: () => Publisher2Type, default: 'local' })
  type: Publisher2Type = Publisher2Type.LOCAL;

  @Enum({ items: () => Publisher2Type2, nullable: true, default: 'LOCAL' })
  type2?: Publisher2Type2 = Publisher2Type2.LOCAL;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}
",
]
`;

exports[`EntityGenerator generate EntitySchema with bidirectional relations and reference wrappers [mysql]: mysql-entity-schema-bidirectional-dump 1`] = `
[
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Author2 } from './Author2';

export class Address2 {
  author!: IdentifiedReference<Author2>;
  value!: string;
}

export const Address2Schema = new EntitySchema({
  class: Address2,
  properties: {
    author: {
      primary: true,
      reference: '1:1',
      entity: () => Author2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
    },
    value: { type: 'string', length: 255 },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Book2 } from './Book2';

export class Author2 {
  id!: number;
  createdAt!: Date;
  updatedAt!: Date;
  name!: string;
  email!: string;
  age?: number;
  termsAccepted: boolean = false;
  optional?: boolean;
  identities?: string;
  born?: string;
  bornTime?: string;
  favouriteBook?: IdentifiedReference<Book2>;
  favouriteAuthor?: IdentifiedReference<Author2>;
  authorToFriend = new Collection<Author2>(this);
  following = new Collection<Author2>(this);
  authorInverse = new Collection<Book2>(this);
  favouriteAuthorInverse = new Collection<Author2>(this);
  authorToFriendInverse = new Collection<Author2>(this);
  followingInverse = new Collection<Author2>(this);
}

export const Author2Schema = new EntitySchema({
  class: Author2,
  indexes: [
    { name: 'author2_name_age_index', properties: ['name', 'age'] },
  ],
  uniques: [
    { name: 'author2_name_email_unique', properties: ['name', 'email'] },
  ],
  properties: {
    id: { primary: true, type: 'number' },
    createdAt: { type: 'Date', length: 3, defaultRaw: \`current_timestamp(3)\` },
    updatedAt: { type: 'Date', length: 3, defaultRaw: \`current_timestamp(3)\` },
    name: { type: 'string', length: 255, index: 'custom_idx_name_123' },
    email: {
      type: 'string',
      length: 255,
      index: 'custom_email_index_name',
      unique: 'custom_email_unique_name',
    },
    age: { type: 'number', nullable: true },
    termsAccepted: { type: 'boolean', default: false, index: 'author2_terms_accepted_index' },
    optional: { type: 'boolean', nullable: true },
    identities: { type: 'string', columnType: 'text', length: 65535, nullable: true },
    born: {
      type: 'string',
      columnType: 'date',
      nullable: true,
      index: 'author2_born_index',
    },
    bornTime: { type: 'string', columnType: 'time', nullable: true, index: 'born_time_idx' },
    favouriteBook: {
      reference: 'm:1',
      entity: () => Book2,
      wrappedReference: true,
      onDelete: 'cascade',
      nullable: true,
    },
    favouriteAuthor: {
      reference: 'm:1',
      entity: () => Author2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    authorToFriend: {
      reference: 'm:n',
      entity: () => Author2,
      pivotTable: 'author_to_friend',
      joinColumn: 'author2_1_id',
      inverseJoinColumn: 'author2_2_id',
    },
    following: {
      reference: 'm:n',
      entity: () => Author2,
      joinColumn: 'author2_1_id',
      inverseJoinColumn: 'author2_2_id',
    },
    authorInverse: { reference: '1:m', entity: () => Book2, mappedBy: 'author' },
    favouriteAuthorInverse: { reference: '1:m', entity: () => Author2, mappedBy: 'favouriteAuthor' },
    authorToFriendInverse: { reference: 'm:n', entity: () => Author2, mappedBy: 'authorToFriend' },
    followingInverse: { reference: 'm:n', entity: () => Author2, mappedBy: 'following' },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';

export class BaseUser2 {
  id!: number;
  firstName!: string;
  lastName!: string;
  type!: BaseUser2Type;
  ownerProp?: string;
  favouriteEmployee?: IdentifiedReference<BaseUser2>;
  favouriteManager?: IdentifiedReference<BaseUser2>;
  employeeProp?: number;
  managerProp?: string;
  favouriteEmployeeInverse = new Collection<BaseUser2>(this);
  favouriteManagerInverse?: IdentifiedReference<BaseUser2>;
}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}

export const BaseUser2Schema = new EntitySchema({
  class: BaseUser2,
  properties: {
    id: { primary: true, type: 'number' },
    firstName: { type: 'string', length: 100 },
    lastName: { type: 'string', length: 100 },
    type: { enum: true, items: () => BaseUser2Type, index: 'base_user2_type_index' },
    ownerProp: { type: 'string', length: 255, nullable: true },
    favouriteEmployee: {
      reference: 'm:1',
      entity: () => BaseUser2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    favouriteManager: {
      reference: '1:1',
      entity: () => BaseUser2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    employeeProp: { type: 'number', nullable: true },
    managerProp: { type: 'string', length: 255, nullable: true },
    favouriteEmployeeInverse: { reference: '1:m', entity: () => BaseUser2, mappedBy: 'favouriteEmployee' },
    favouriteManagerInverse: {
      reference: '1:1',
      entity: () => BaseUser2,
      wrappedReference: true,
      mappedBy: 'favouriteManager',
    },
  },
});
",
  "import { Collection, EntitySchema } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

export class BookTag2 {
  id!: string;
  name!: string;
  bookToTagUnorderedInverse = new Collection<Book2>(this);
  bookTag2Inverse = new Collection<Book2Tags>(this);
}

export const BookTag2Schema = new EntitySchema({
  class: BookTag2,
  properties: {
    id: { primary: true, type: 'string', columnType: 'bigint' },
    name: { type: 'string', length: 50 },
    bookToTagUnorderedInverse: { reference: 'm:n', entity: () => Book2, mappedBy: 'bookToTagUnordered' },
    bookTag2Inverse: { reference: '1:m', entity: () => Book2Tags, mappedBy: 'bookTag2' },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Book2 {
  uuidPk!: string;
  createdAt!: Date;
  title?: string;
  perex?: string;
  price?: string;
  double?: string;
  meta?: any;
  author!: IdentifiedReference<Author2>;
  publisher?: IdentifiedReference<Publisher2>;
  foo?: string;
  bookToTagUnordered = new Collection<BookTag2>(this);
  favouriteBookInverse = new Collection<Author2>(this);
  book2Inverse = new Collection<Book2Tags>(this);
  bookInverse?: IdentifiedReference<Test2>;
}

export const Book2Schema = new EntitySchema({
  class: Book2,
  properties: {
    uuidPk: { primary: true, type: 'string', length: 36 },
    createdAt: { type: 'Date', length: 3, defaultRaw: \`current_timestamp(3)\` },
    title: { type: 'string', length: 255, nullable: true, index: 'book2_title_index' },
    perex: { type: 'string', columnType: 'text', length: 65535, nullable: true },
    price: { type: 'string', columnType: 'decimal(8,2)', nullable: true },
    double: { type: 'string', columnType: 'double', nullable: true },
    meta: { type: 'any', columnType: 'json', nullable: true },
    author: { reference: 'm:1', entity: () => Author2, wrappedReference: true },
    publisher: {
      reference: 'm:1',
      entity: () => Publisher2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
      nullable: true,
    },
    foo: { type: 'string', length: 255, nullable: true, default: 'lol' },
    bookToTagUnordered: {
      reference: 'm:n',
      entity: () => BookTag2,
      pivotTable: 'book_to_tag_unordered',
      joinColumn: 'book2_uuid_pk',
      inverseJoinColumn: 'book_tag2_id',
    },
    favouriteBookInverse: { reference: '1:m', entity: () => Author2, mappedBy: 'favouriteBook' },
    book2Inverse: { reference: '1:m', entity: () => Book2Tags, mappedBy: 'book2' },
    bookInverse: {
      reference: '1:1',
      entity: () => Test2,
      wrappedReference: true,
      mappedBy: 'book',
    },
  },
});
",
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

export class Book2Tags {
  order!: number;
  book2!: IdentifiedReference<Book2>;
  bookTag2!: IdentifiedReference<BookTag2>;
}

export const Book2TagsSchema = new EntitySchema({
  class: Book2Tags,
  tableName: 'book2_tags',
  properties: {
    order: { primary: true, type: 'number' },
    book2: {
      reference: 'm:1',
      entity: () => Book2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
    },
    bookTag2: {
      reference: 'm:1',
      entity: () => BookTag2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
    },
  },
});
",
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Car2 } from './Car2';

export class CarOwner2 {
  id!: number;
  name!: string;
  car!: IdentifiedReference<Car2>;
}

export const CarOwner2Schema = new EntitySchema({
  class: CarOwner2,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255 },
    car: {
      reference: 'm:1',
      entity: () => Car2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
    },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

export class Car2 {
  name!: string;
  year!: number;
  price!: number;
  carInverse = new Collection<CarOwner2>(this);
  favouriteCarInverse?: IdentifiedReference<User2>;
  carsInverse = new Collection<User2>(this);
}

export const Car2Schema = new EntitySchema({
  class: Car2,
  properties: {
    name: { primary: true, type: 'string', length: 100, index: 'car2_name_index' },
    year: { primary: true, type: 'number', index: 'car2_year_index' },
    price: { type: 'number' },
    carInverse: { reference: '1:m', entity: () => CarOwner2, mappedBy: 'car' },
    favouriteCarInverse: {
      reference: '1:1',
      entity: () => User2,
      wrappedReference: true,
      mappedBy: 'favouriteCar',
    },
    carsInverse: { reference: 'm:n', entity: () => User2, mappedBy: 'cars' },
  },
});
",
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Test2 } from './Test2';

export class Configuration2 {
  property!: string;
  test!: IdentifiedReference<Test2>;
  value!: string;
}

export const Configuration2Schema = new EntitySchema({
  class: Configuration2,
  properties: {
    property: { primary: true, type: 'string', length: 255 },
    test: {
      primary: true,
      reference: 'm:1',
      entity: () => Test2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
    },
    value: { type: 'string', length: 255 },
  },
});
",
  "import { EntitySchema } from '@mikro-orm/core';

export class Dummy2 {
  id!: number;
}

export const Dummy2Schema = new EntitySchema({
  class: Dummy2,
  properties: {
    id: { primary: true, type: 'number' },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';
import { Test2 } from './Test2';

export class FooBar2 {
  id!: number;
  name!: string;
  nameWithSpace?: string;
  baz?: IdentifiedReference<FooBaz2>;
  fooBar?: IdentifiedReference<FooBar2>;
  version!: Date;
  blob?: Buffer;
  blob2?: Buffer;
  array?: string;
  objectProperty?: any;
  fooBarInverse?: IdentifiedReference<Test2>;
  barInverse = new Collection<FooParam2>(this);
  barsInverse = new Collection<Test2>(this);
}

export const FooBar2Schema = new EntitySchema({
  class: FooBar2,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255 },
    nameWithSpace: { type: 'string', fieldName: 'name with space', length: 255, nullable: true },
    baz: {
      reference: '1:1',
      entity: () => FooBaz2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    fooBar: {
      reference: '1:1',
      entity: () => FooBar2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    version: { type: 'Date', defaultRaw: \`CURRENT_TIMESTAMP\` },
    blob: { type: 'Buffer', length: 65535, nullable: true },
    blob2: { type: 'Buffer', length: 65535, nullable: true },
    array: { type: 'string', columnType: 'text', length: 65535, nullable: true },
    objectProperty: { type: 'any', columnType: 'json', nullable: true },
    fooBarInverse: {
      reference: '1:1',
      entity: () => Test2,
      wrappedReference: true,
      mappedBy: 'fooBar',
    },
    barInverse: { reference: '1:m', entity: () => FooParam2, mappedBy: 'bar' },
    barsInverse: { reference: 'm:n', entity: () => Test2, mappedBy: 'bars' },
  },
});
",
  "import { Collection, EntitySchema } from '@mikro-orm/core';
import { FooParam2 } from './FooParam2';

export class FooBaz2 {
  id!: number;
  name!: string;
  version!: Date;
  bazInverse = new Collection<FooParam2>(this);
}

export const FooBaz2Schema = new EntitySchema({
  class: FooBaz2,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255 },
    version: { type: 'Date', length: 3, defaultRaw: \`current_timestamp(3)\` },
    bazInverse: { reference: '1:m', entity: () => FooParam2, mappedBy: 'baz' },
  },
});
",
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

export class FooParam2 {
  bar!: IdentifiedReference<FooBar2>;
  baz!: IdentifiedReference<FooBaz2>;
  value!: string;
  version!: Date;
}

export const FooParam2Schema = new EntitySchema({
  class: FooParam2,
  properties: {
    bar: {
      primary: true,
      reference: 'm:1',
      entity: () => FooBar2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
    },
    baz: {
      primary: true,
      reference: 'm:1',
      entity: () => FooBaz2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
    },
    value: { type: 'string', length: 255 },
    version: { type: 'Date', length: 3, defaultRaw: \`current_timestamp(3)\` },
  },
});
",
  "import { Collection, EntitySchema } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

export class Publisher2 {
  id!: number;
  name!: string;
  type!: Publisher2Type;
  type2!: Publisher2Type2;
  enum1?: number;
  enum2?: number;
  enum3?: number;
  enum4?: Publisher2Enum4;
  enum5?: Publisher2Enum5;
  publisherInverse = new Collection<Book2>(this);
  publisher2Inverse = new Collection<Publisher2Tests>(this);
}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}

export const Publisher2Schema = new EntitySchema({
  class: Publisher2,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255 },
    type: { enum: true, items: () => Publisher2Type },
    type2: { enum: true, items: () => Publisher2Type2 },
    enum1: { type: 'number', columnType: 'tinyint', nullable: true },
    enum2: { type: 'number', columnType: 'tinyint', nullable: true },
    enum3: { type: 'number', columnType: 'tinyint', nullable: true },
    enum4: { enum: true, items: () => Publisher2Enum4, nullable: true },
    enum5: { enum: true, items: () => Publisher2Enum5, nullable: true },
    publisherInverse: { reference: '1:m', entity: () => Book2, mappedBy: 'publisher' },
    publisher2Inverse: { reference: '1:m', entity: () => Publisher2Tests, mappedBy: 'publisher2' },
  },
});
",
  "import { EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Publisher2Tests {
  id!: number;
  publisher2!: IdentifiedReference<Publisher2>;
  test2!: IdentifiedReference<Test2>;
}

export const Publisher2TestsSchema = new EntitySchema({
  class: Publisher2Tests,
  tableName: 'publisher2_tests',
  properties: {
    id: { primary: true, type: 'number' },
    publisher2: {
      reference: 'm:1',
      entity: () => Publisher2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
    },
    test2: {
      reference: 'm:1',
      entity: () => Test2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'cascade',
    },
  },
});
",
  "import { Collection, EntitySchema } from '@mikro-orm/core';
import { User2 } from './User2';

export class Sandwich {
  id!: number;
  name!: string;
  price!: number;
  sandwichesInverse = new Collection<User2>(this);
}

export const SandwichSchema = new EntitySchema({
  class: Sandwich,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255 },
    price: { type: 'number' },
    sandwichesInverse: { reference: 'm:n', entity: () => User2, mappedBy: 'sandwiches' },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { FooBar2 } from './FooBar2';
import { Publisher2Tests } from './Publisher2Tests';

export class Test2 {
  id!: number;
  name?: string;
  book?: IdentifiedReference<Book2>;
  parent?: IdentifiedReference<Test2>;
  version: number = 1;
  fooBar?: IdentifiedReference<FooBar2>;
  fooBaz?: number;
  bars = new Collection<FooBar2>(this);
  testInverse = new Collection<Configuration2>(this);
  test2Inverse = new Collection<Publisher2Tests>(this);
  parentInverse = new Collection<Test2>(this);
}

export const Test2Schema = new EntitySchema({
  class: Test2,
  properties: {
    id: { primary: true, type: 'number' },
    name: { type: 'string', length: 255, nullable: true },
    book: {
      reference: '1:1',
      entity: () => Book2,
      wrappedReference: true,
      onDelete: 'set null',
      nullable: true,
    },
    parent: {
      reference: 'm:1',
      entity: () => Test2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    version: { type: 'number', default: 1 },
    fooBar: {
      reference: '1:1',
      entity: () => FooBar2,
      wrappedReference: true,
      fieldName: 'foo___bar',
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    fooBaz: { type: 'number', fieldName: 'foo___baz', nullable: true },
    bars: {
      reference: 'm:n',
      entity: () => FooBar2,
      joinColumn: 'test2_id',
      inverseJoinColumn: 'foo_bar2_id',
    },
    testInverse: { reference: '1:m', entity: () => Configuration2, mappedBy: 'test' },
    test2Inverse: { reference: '1:m', entity: () => Publisher2Tests, mappedBy: 'test2' },
    parentInverse: { reference: '1:m', entity: () => Test2, mappedBy: 'parent' },
  },
});
",
  "import { Collection, EntitySchema, IdentifiedReference } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

export class User2 {
  firstName!: string;
  lastName!: string;
  foo?: number;
  favouriteCar?: IdentifiedReference<Car2>;
  cars = new Collection<Car2>(this);
  sandwiches = new Collection<Sandwich>(this);
}

export const User2Schema = new EntitySchema({
  class: User2,
  properties: {
    firstName: { primary: true, type: 'string', length: 100 },
    lastName: { primary: true, type: 'string', length: 100 },
    foo: { type: 'number', nullable: true },
    favouriteCar: {
      reference: '1:1',
      entity: () => Car2,
      wrappedReference: true,
      onUpdateIntegrity: 'cascade',
      onDelete: 'set null',
      nullable: true,
    },
    cars: {
      reference: 'm:n',
      entity: () => Car2,
      joinColumns: ['user2_first_name', 'user2_last_name'],
      inverseJoinColumns: ['car2_name', 'car2_year'],
    },
    sandwiches: {
      reference: 'm:n',
      entity: () => Sandwich,
      joinColumns: ['user2_first_name', 'user2_last_name'],
      inverseJoinColumn: 'sandwich_id',
    },
  },
});
",
]
`;

exports[`EntityGenerator generate OptionalProps and include properties for columns that are not nullable, but have defaults: generate-OptionalProps 1`] = `
[
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Account {

  [OptionalProps]?: 'active' | 'receiveEmailNotifications';

  @PrimaryKey({ columnType: 'bigint' })
  id!: string;

  @Property({ default: false })
  active: boolean = false;

  @Property({ default: true })
  receiveEmailNotifications: boolean = true;

}
",
]
`;

exports[`EntityGenerator generate entities from schema [mysql]: mysql-entity-dump 1`] = `
[
  "import { Entity, OneToOne, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity()
export class Address2 {

  @OneToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', primary: true })
  author!: Author2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  [OptionalProps]?: 'createdAt' | 'termsAccepted' | 'updatedAt';

  @PrimaryKey()
  id!: number;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  updatedAt!: Date;

  @Index({ name: 'custom_idx_name_123' })
  @Property({ length: 255 })
  name!: string;

  @Index({ name: 'custom_email_index_name' })
  @Unique({ name: 'custom_email_unique_name' })
  @Property({ length: 255 })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Index({ name: 'author2_terms_accepted_index' })
  @Property({ default: false })
  termsAccepted: boolean = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  identities?: string;

  @Index({ name: 'author2_born_index' })
  @Property({ columnType: 'date', nullable: true })
  born?: string;

  @Index({ name: 'born_time_idx' })
  @Property({ columnType: 'time', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, onDelete: 'cascade', nullable: true })
  favouriteBook?: Book2;

  @ManyToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteAuthor?: Author2;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, Enum, Index, ManyToOne, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Index({ name: 'base_user2_type_index' })
  @Enum({ items: () => BaseUser2Type })
  type!: BaseUser2Type;

  @Property({ length: 255, nullable: true })
  ownerProp?: string;

  @ManyToOne({ entity: () => BaseUser2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteEmployee?: BaseUser2;

  @OneToOne({ entity: () => BaseUser2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteManager?: BaseUser2;

  @Property({ nullable: true })
  employeeProp?: number;

  @Property({ length: 255, nullable: true })
  managerProp?: string;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey({ columnType: 'bigint' })
  id!: string;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';

@Entity()
export class Book2 {

  [OptionalProps]?: 'createdAt';

  @PrimaryKey({ length: 36 })
  uuidPk!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Index({ name: 'book2_title_index' })
  @Property({ length: 255, nullable: true })
  title?: string;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  perex?: string;

  @Property({ columnType: 'decimal(8,2)', nullable: true })
  price?: string;

  @Property({ columnType: 'double', nullable: true })
  double?: string;

  @Property({ columnType: 'json', nullable: true })
  meta?: any;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', nullable: true })
  publisher?: Publisher2;

  @Property({ length: 255, nullable: true, default: 'lol' })
  foo?: string;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @ManyToOne({ entity: () => Car2, onUpdateIntegrity: 'cascade' })
  car!: Car2;

}
",
  "import { Entity, Index, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Car2 {

  @Index({ name: 'car2_name_index' })
  @PrimaryKey({ length: 100 })
  name!: string;

  @Index({ name: 'car2_year_index' })
  @PrimaryKey()
  year!: number;

  @Property()
  price!: number;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  @PrimaryKey({ length: 255 })
  property!: string;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', primary: true })
  test!: Test2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Entity, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooBar2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ fieldName: 'name with space', length: 255, nullable: true })
  nameWithSpace?: string;

  @OneToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  baz?: FooBaz2;

  @OneToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: FooBar2;

  @Property({ defaultRaw: \`CURRENT_TIMESTAMP\` })
  version!: Date;

  @Property({ length: 65535, nullable: true })
  blob?: Buffer;

  @Property({ length: 65535, nullable: true })
  blob2?: Buffer;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  array?: string;

  @Property({ columnType: 'json', nullable: true })
  objectProperty?: any;

}
",
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, ManyToOne, OptionalProps, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [OptionalProps]?: 'version';

  @ManyToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', primary: true })
  baz!: FooBaz2;

  @Property({ length: 255 })
  value!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, Enum, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Enum({ items: () => Publisher2Type })
  type!: Publisher2Type;

  @Enum({ items: () => Publisher2Type2 })
  type2!: Publisher2Type2;

  @Property({ columnType: 'tinyint', nullable: true })
  enum1?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum2?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

  @Enum({ items: () => Publisher2Enum5, nullable: true })
  enum5?: Publisher2Enum5;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: Test2;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property()
  price!: number;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { FooBar2 } from './FooBar2';

@Entity()
export class Test2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255, nullable: true })
  name?: string;

  @OneToOne({ entity: () => Book2, onDelete: 'set null', nullable: true })
  book?: Book2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  parent?: Test2;

  @Property({ default: 1 })
  version: number = 1;

  @OneToOne({ entity: () => FooBar2, fieldName: 'foo___bar', onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: FooBar2;

  @Property({ fieldName: 'foo___baz', nullable: true })
  fooBaz?: number;

  @ManyToMany({ entity: () => FooBar2, joinColumn: 'test2_id', inverseJoinColumn: 'foo_bar2_id' })
  bars = new Collection<FooBar2>(this);

}
",
  "import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
export class User2 {

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ nullable: true })
  foo?: number;

  @OneToOne({ entity: () => Car2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteCar?: Car2;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator generate entities from schema [postgres]: postgres-entity-dump 1`] = `
[
  "import { Entity, OneToOne, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity()
export class Address2 {

  @OneToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', primary: true })
  author!: Author2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  [OptionalProps]?: 'createdAt' | 'termsAccepted' | 'updatedAt';

  @PrimaryKey()
  id!: number;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  updatedAt!: Date;

  @Index({ name: 'custom_idx_name_123' })
  @Property({ length: 255 })
  name!: string;

  @Index({ name: 'custom_email_index_name' })
  @Unique({ name: 'custom_email_unique_name' })
  @Property({ length: 255 })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Index({ name: 'author2_terms_accepted_index' })
  @Property({ default: false })
  termsAccepted: boolean = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ nullable: true })
  identities?: string[];

  @Index({ name: 'author2_born_index' })
  @Property({ columnType: 'date', nullable: true })
  born?: string;

  @Index({ name: 'born_time_idx' })
  @Property({ columnType: 'time', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, onDelete: 'cascade', nullable: true })
  favouriteBook?: Book2;

  @ManyToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteAuthor?: Author2;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey({ columnType: 'int8' })
  id!: string;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';

@Entity()
export class Book2 {

  [OptionalProps]?: 'createdAt';

  @PrimaryKey({ columnType: 'uuid' })
  uuidPk!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 255, nullable: true, default: '' })
  title?: string;

  @Property({ columnType: 'text', nullable: true })
  perex?: string;

  @Property({ columnType: 'numeric', nullable: true })
  price?: string;

  @Property({ columnType: 'numeric', nullable: true })
  double?: string;

  @Property({ columnType: 'jsonb', nullable: true })
  meta?: any;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', nullable: true })
  publisher?: Publisher2;

  @Property({ length: 255, nullable: true, default: 'lol' })
  foo?: string;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  @PrimaryKey({ length: 255 })
  property!: string;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', primary: true })
  test!: Test2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Entity, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooBar2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ fieldName: 'name with space', length: 255, nullable: true })
  nameWithSpace?: string;

  @OneToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  baz?: FooBaz2;

  @OneToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: FooBar2;

  @Property({ defaultRaw: \`current_timestamp(0)\` })
  version!: Date;

  @Property({ nullable: true })
  blob?: Buffer;

  @Property({ nullable: true })
  blob2?: Buffer;

  @Property({ nullable: true })
  array?: string[];

  @Property({ columnType: 'jsonb', nullable: true })
  objectProperty?: any;

}
",
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, ManyToOne, OptionalProps, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [OptionalProps]?: 'version';

  @ManyToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', primary: true })
  baz!: FooBaz2;

  @Property({ length: 255 })
  value!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Label2 {

  @PrimaryKey({ columnType: 'uuid' })
  uuid!: string;

  @Property({ length: 255 })
  name!: string;

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Label2 } from './Label2';
import { Test2 } from './Test2';

@Entity({ tableName: 'label2_tests', schema: 'label_schema' })
export class Label2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Label2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  label2!: Label2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: Test2;

}
",
  "import { Entity, Enum, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Enum({ items: () => Publisher2Type })
  type!: Publisher2Type;

  @Enum({ items: () => Publisher2Type2 })
  type2!: Publisher2Type2;

  @Property({ columnType: 'int2', nullable: true })
  enum1?: number;

  @Property({ columnType: 'int2', nullable: true })
  enum2?: number;

  @Property({ columnType: 'int2', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

  @Enum({ items: () => Publisher2Enum5, nullable: true })
  enum5?: Publisher2Enum5;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: Test2;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { FooBar2 } from './FooBar2';

@Entity()
export class Test2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255, nullable: true })
  name?: string;

  @OneToOne({ entity: () => Book2, onDelete: 'set null', nullable: true })
  book?: Book2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  parent?: Test2;

  @Property({ default: 1 })
  version: number = 1;

  @Property({ columnType: 'polygon', nullable: true })
  path?: unknown;

  @ManyToMany({ entity: () => FooBar2, joinColumn: 'test2_id', inverseJoinColumn: 'foo_bar2_id' })
  bars = new Collection<FooBar2>(this);

}
",
]
`;

exports[`EntityGenerator generate entities from schema [sqlite]: sqlite-entity-dump 1`] = `
[
  "import { Entity, Index, ManyToOne, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book3 } from './Book3';

@Entity()
@Index({ name: 'author3_name_favourite_book_id_index', properties: ['name', 'favouriteBook'] })
export class Author3 {

  [OptionalProps]?: 'termsAccepted';

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  createdAt?: Date;

  @Property({ nullable: true })
  updatedAt?: Date;

  @Property()
  name!: string;

  @Unique({ name: 'author3_email_unique' })
  @Property()
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Property({ default: 0 })
  termsAccepted: number = 0;

  @Property({ nullable: true })
  identities?: string;

  @Property({ columnType: 'date(3)', nullable: true })
  born?: string;

  @Property({ columnType: 'time(3)', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book3, onUpdateIntegrity: 'cascade', nullable: true, index: 'author3_favourite_book_idx' })
  favouriteBook?: Book3;

}
",
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag3 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property({ defaultRaw: \`current_timestamp\` })
  version!: Date;

}
",
  "import { Entity, ManyToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author3 } from './Author3';
import { Publisher3 } from './Publisher3';

@Entity()
export class Book3 {

  [OptionalProps]?: 'title';

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  createdAt?: Date;

  @Property({ nullable: true })
  updatedAt?: Date;

  @Property({ default: '' })
  title!: string;

  @ManyToOne({ entity: () => Author3, onUpdateIntegrity: 'cascade' })
  author!: Author3;

  @ManyToOne({ entity: () => Publisher3, onUpdateIntegrity: 'cascade', nullable: true })
  publisher?: Publisher3;

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book3 } from './Book3';
import { BookTag3 } from './BookTag3';

@Entity({ tableName: 'book3_tags' })
export class Book3Tags {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Book3, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book3!: Book3;

  @ManyToOne({ entity: () => BookTag3, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag3!: BookTag3;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher3 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property()
  type!: string;

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher3 } from './Publisher3';
import { Test3 } from './Test3';

@Entity({ tableName: 'publisher3_tests' })
export class Publisher3Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher3, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher3!: Publisher3;

  @ManyToOne({ entity: () => Test3, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test3!: Test3;

}
",
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Test3 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  name?: string;

  @Property({ default: 1 })
  version: number = 1;

}
",
]
`;

exports[`EntityGenerator generate entities with bidirectional relations [mysql]: mysql-entity-bidirectional-dump 1`] = `
[
  "import { Entity, OneToOne, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity()
export class Address2 {

  @OneToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', primary: true })
  author!: Author2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, OneToMany, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  [OptionalProps]?: 'createdAt' | 'termsAccepted' | 'updatedAt';

  @PrimaryKey()
  id!: number;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  updatedAt!: Date;

  @Index({ name: 'custom_idx_name_123' })
  @Property({ length: 255 })
  name!: string;

  @Index({ name: 'custom_email_index_name' })
  @Unique({ name: 'custom_email_unique_name' })
  @Property({ length: 255 })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Index({ name: 'author2_terms_accepted_index' })
  @Property({ default: false })
  termsAccepted: boolean = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  identities?: string;

  @Index({ name: 'author2_born_index' })
  @Property({ columnType: 'date', nullable: true })
  born?: string;

  @Index({ name: 'born_time_idx' })
  @Property({ columnType: 'time', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, onDelete: 'cascade', nullable: true })
  favouriteBook?: Book2;

  @ManyToOne({ entity: () => Author2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteAuthor?: Author2;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

  @OneToMany({ entity: () => Book2, mappedBy: 'author' })
  authorInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Author2, mappedBy: 'favouriteAuthor' })
  favouriteAuthorInverse = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, mappedBy: 'authorToFriend' })
  authorToFriendInverse = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, mappedBy: 'following' })
  followingInverse = new Collection<Author2>(this);

}
",
  "import { Collection, Entity, Enum, Index, ManyToOne, OneToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Index({ name: 'base_user2_type_index' })
  @Enum({ items: () => BaseUser2Type })
  type!: BaseUser2Type;

  @Property({ length: 255, nullable: true })
  ownerProp?: string;

  @ManyToOne({ entity: () => BaseUser2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteEmployee?: BaseUser2;

  @OneToOne({ entity: () => BaseUser2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteManager?: BaseUser2;

  @Property({ nullable: true })
  employeeProp?: number;

  @Property({ length: 255, nullable: true })
  managerProp?: string;

  @OneToMany({ entity: () => BaseUser2, mappedBy: 'favouriteEmployee' })
  favouriteEmployeeInverse = new Collection<BaseUser2>(this);

  @OneToOne({ entity: () => BaseUser2, mappedBy: 'favouriteManager' })
  favouriteManagerInverse?: BaseUser2;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Collection, Entity, ManyToMany, OneToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

@Entity()
export class BookTag2 {

  @PrimaryKey({ columnType: 'bigint' })
  id!: string;

  @Property({ length: 50 })
  name!: string;

  @ManyToMany({ entity: () => Book2, mappedBy: 'bookToTagUnordered' })
  bookToTagUnorderedInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Book2Tags, mappedBy: 'bookTag2' })
  bookTag2Inverse = new Collection<Book2Tags>(this);

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity()
export class Book2 {

  [OptionalProps]?: 'createdAt';

  @PrimaryKey({ length: 36 })
  uuidPk!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Index({ name: 'book2_title_index' })
  @Property({ length: 255, nullable: true })
  title?: string;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  perex?: string;

  @Property({ columnType: 'decimal(8,2)', nullable: true })
  price?: string;

  @Property({ columnType: 'double', nullable: true })
  double?: string;

  @Property({ columnType: 'json', nullable: true })
  meta?: any;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade', nullable: true })
  publisher?: Publisher2;

  @Property({ length: 255, nullable: true, default: 'lol' })
  foo?: string;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

  @OneToMany({ entity: () => Author2, mappedBy: 'favouriteBook' })
  favouriteBookInverse = new Collection<Author2>(this);

  @OneToMany({ entity: () => Book2Tags, mappedBy: 'book2' })
  book2Inverse = new Collection<Book2Tags>(this);

  @OneToOne({ entity: () => Test2, mappedBy: 'book' })
  bookInverse?: Test2;

}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @ManyToOne({ entity: () => Car2, onUpdateIntegrity: 'cascade' })
  car!: Car2;

}
",
  "import { Collection, Entity, Index, ManyToMany, OneToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

@Entity()
export class Car2 {

  @Index({ name: 'car2_name_index' })
  @PrimaryKey({ length: 100 })
  name!: string;

  @Index({ name: 'car2_year_index' })
  @PrimaryKey()
  year!: number;

  @Property()
  price!: number;

  @OneToMany({ entity: () => CarOwner2, mappedBy: 'car' })
  carInverse = new Collection<CarOwner2>(this);

  @OneToOne({ entity: () => User2, mappedBy: 'favouriteCar' })
  favouriteCarInverse?: User2;

  @ManyToMany({ entity: () => User2, mappedBy: 'cars' })
  carsInverse = new Collection<User2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  @PrimaryKey({ length: 255 })
  property!: string;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', primary: true })
  test!: Test2;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Collection, Entity, ManyToMany, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';
import { Test2 } from './Test2';

@Entity()
export class FooBar2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ fieldName: 'name with space', length: 255, nullable: true })
  nameWithSpace?: string;

  @OneToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  baz?: FooBaz2;

  @OneToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: FooBar2;

  @Property({ defaultRaw: \`CURRENT_TIMESTAMP\` })
  version!: Date;

  @Property({ length: 65535, nullable: true })
  blob?: Buffer;

  @Property({ length: 65535, nullable: true })
  blob2?: Buffer;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  array?: string;

  @Property({ columnType: 'json', nullable: true })
  objectProperty?: any;

  @OneToOne({ entity: () => Test2, mappedBy: 'fooBar' })
  fooBarInverse?: Test2;

  @OneToMany({ entity: () => FooParam2, mappedBy: 'bar' })
  barInverse = new Collection<FooParam2>(this);

  @ManyToMany({ entity: () => Test2, mappedBy: 'bars' })
  barsInverse = new Collection<Test2>(this);

}
",
  "import { Collection, Entity, OneToMany, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooParam2 } from './FooParam2';

@Entity()
export class FooBaz2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

  @OneToMany({ entity: () => FooParam2, mappedBy: 'baz' })
  bazInverse = new Collection<FooParam2>(this);

}
",
  "import { Entity, ManyToOne, OptionalProps, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [OptionalProps]?: 'version';

  @ManyToOne({ entity: () => FooBar2, onUpdateIntegrity: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, onUpdateIntegrity: 'cascade', primary: true })
  baz!: FooBaz2;

  @Property({ length: 255 })
  value!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Collection, Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Enum({ items: () => Publisher2Type })
  type!: Publisher2Type;

  @Enum({ items: () => Publisher2Type2 })
  type2!: Publisher2Type2;

  @Property({ columnType: 'tinyint', nullable: true })
  enum1?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum2?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

  @Enum({ items: () => Publisher2Enum5, nullable: true })
  enum5?: Publisher2Enum5;

  @OneToMany({ entity: () => Book2, mappedBy: 'publisher' })
  publisherInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Publisher2Tests, mappedBy: 'publisher2' })
  publisher2Inverse = new Collection<Publisher2Tests>(this);

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: Test2;

}
",
  "import { Collection, Entity, ManyToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { User2 } from './User2';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property()
  price!: number;

  @ManyToMany({ entity: () => User2, mappedBy: 'sandwiches' })
  sandwichesInverse = new Collection<User2>(this);

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { FooBar2 } from './FooBar2';
import { Publisher2Tests } from './Publisher2Tests';

@Entity()
export class Test2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255, nullable: true })
  name?: string;

  @OneToOne({ entity: () => Book2, onDelete: 'set null', nullable: true })
  book?: Book2;

  @ManyToOne({ entity: () => Test2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  parent?: Test2;

  @Property({ default: 1 })
  version: number = 1;

  @OneToOne({ entity: () => FooBar2, fieldName: 'foo___bar', onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: FooBar2;

  @Property({ fieldName: 'foo___baz', nullable: true })
  fooBaz?: number;

  @ManyToMany({ entity: () => FooBar2, joinColumn: 'test2_id', inverseJoinColumn: 'foo_bar2_id' })
  bars = new Collection<FooBar2>(this);

  @OneToMany({ entity: () => Configuration2, mappedBy: 'test' })
  testInverse = new Collection<Configuration2>(this);

  @OneToMany({ entity: () => Publisher2Tests, mappedBy: 'test2' })
  test2Inverse = new Collection<Publisher2Tests>(this);

  @OneToMany({ entity: () => Test2, mappedBy: 'parent' })
  parentInverse = new Collection<Test2>(this);

}
",
  "import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
export class User2 {

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ nullable: true })
  foo?: number;

  @OneToOne({ entity: () => Car2, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteCar?: Car2;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator generate entities with bidirectional relations and reference wrappers [mysql]: mysql-entity-bidirectional-dump 1`] = `
[
  "import { Entity, IdentifiedReference, OneToOne, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity()
export class Address2 {

  @OneToOne({ entity: () => Author2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade', primary: true })
  author!: IdentifiedReference<Author2>;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Collection, Entity, IdentifiedReference, Index, ManyToMany, ManyToOne, OneToMany, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  [OptionalProps]?: 'createdAt' | 'termsAccepted' | 'updatedAt';

  @PrimaryKey()
  id!: number;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  updatedAt!: Date;

  @Index({ name: 'custom_idx_name_123' })
  @Property({ length: 255 })
  name!: string;

  @Index({ name: 'custom_email_index_name' })
  @Unique({ name: 'custom_email_unique_name' })
  @Property({ length: 255 })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Index({ name: 'author2_terms_accepted_index' })
  @Property({ default: false })
  termsAccepted: boolean = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  identities?: string;

  @Index({ name: 'author2_born_index' })
  @Property({ columnType: 'date', nullable: true })
  born?: string;

  @Index({ name: 'born_time_idx' })
  @Property({ columnType: 'time', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, wrappedReference: true, onDelete: 'cascade', nullable: true })
  favouriteBook?: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => Author2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteAuthor?: IdentifiedReference<Author2>;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

  @OneToMany({ entity: () => Book2, mappedBy: 'author' })
  authorInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Author2, mappedBy: 'favouriteAuthor' })
  favouriteAuthorInverse = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, mappedBy: 'authorToFriend' })
  authorToFriendInverse = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, mappedBy: 'following' })
  followingInverse = new Collection<Author2>(this);

}
",
  "import { Collection, Entity, Enum, IdentifiedReference, Index, ManyToOne, OneToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Index({ name: 'base_user2_type_index' })
  @Enum({ items: () => BaseUser2Type })
  type!: BaseUser2Type;

  @Property({ length: 255, nullable: true })
  ownerProp?: string;

  @ManyToOne({ entity: () => BaseUser2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteEmployee?: IdentifiedReference<BaseUser2>;

  @OneToOne({ entity: () => BaseUser2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteManager?: IdentifiedReference<BaseUser2>;

  @Property({ nullable: true })
  employeeProp?: number;

  @Property({ length: 255, nullable: true })
  managerProp?: string;

  @OneToMany({ entity: () => BaseUser2, mappedBy: 'favouriteEmployee' })
  favouriteEmployeeInverse = new Collection<BaseUser2>(this);

  @OneToOne({ entity: () => BaseUser2, wrappedReference: true, mappedBy: 'favouriteManager' })
  favouriteManagerInverse?: IdentifiedReference<BaseUser2>;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Collection, Entity, ManyToMany, OneToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

@Entity()
export class BookTag2 {

  @PrimaryKey({ columnType: 'bigint' })
  id!: string;

  @Property({ length: 50 })
  name!: string;

  @ManyToMany({ entity: () => Book2, mappedBy: 'bookToTagUnordered' })
  bookToTagUnorderedInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Book2Tags, mappedBy: 'bookTag2' })
  bookTag2Inverse = new Collection<Book2Tags>(this);

}
",
  "import { Collection, Entity, IdentifiedReference, Index, ManyToMany, ManyToOne, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity()
export class Book2 {

  [OptionalProps]?: 'createdAt';

  @PrimaryKey({ length: 36 })
  uuidPk!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Index({ name: 'book2_title_index' })
  @Property({ length: 255, nullable: true })
  title?: string;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  perex?: string;

  @Property({ columnType: 'decimal(8,2)', nullable: true })
  price?: string;

  @Property({ columnType: 'double', nullable: true })
  double?: string;

  @Property({ columnType: 'json', nullable: true })
  meta?: any;

  @ManyToOne({ entity: () => Author2, wrappedReference: true })
  author!: IdentifiedReference<Author2>;

  @ManyToOne({ entity: () => Publisher2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade', nullable: true })
  publisher?: IdentifiedReference<Publisher2>;

  @Property({ length: 255, nullable: true, default: 'lol' })
  foo?: string;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

  @OneToMany({ entity: () => Author2, mappedBy: 'favouriteBook' })
  favouriteBookInverse = new Collection<Author2>(this);

  @OneToMany({ entity: () => Book2Tags, mappedBy: 'book2' })
  book2Inverse = new Collection<Book2Tags>(this);

  @OneToOne({ entity: () => Test2, wrappedReference: true, mappedBy: 'book' })
  bookInverse?: IdentifiedReference<Test2>;

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book2!: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => BookTag2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag2!: IdentifiedReference<BookTag2>;

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @ManyToOne({ entity: () => Car2, wrappedReference: true, onUpdateIntegrity: 'cascade' })
  car!: IdentifiedReference<Car2>;

}
",
  "import { Collection, Entity, IdentifiedReference, Index, ManyToMany, OneToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

@Entity()
export class Car2 {

  @Index({ name: 'car2_name_index' })
  @PrimaryKey({ length: 100 })
  name!: string;

  @Index({ name: 'car2_year_index' })
  @PrimaryKey()
  year!: number;

  @Property()
  price!: number;

  @OneToMany({ entity: () => CarOwner2, mappedBy: 'car' })
  carInverse = new Collection<CarOwner2>(this);

  @OneToOne({ entity: () => User2, wrappedReference: true, mappedBy: 'favouriteCar' })
  favouriteCarInverse?: IdentifiedReference<User2>;

  @ManyToMany({ entity: () => User2, mappedBy: 'cars' })
  carsInverse = new Collection<User2>(this);

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  @PrimaryKey({ length: 255 })
  property!: string;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  test!: IdentifiedReference<Test2>;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Collection, Entity, IdentifiedReference, ManyToMany, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';
import { Test2 } from './Test2';

@Entity()
export class FooBar2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ fieldName: 'name with space', length: 255, nullable: true })
  nameWithSpace?: string;

  @OneToOne({ entity: () => FooBaz2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  baz?: IdentifiedReference<FooBaz2>;

  @OneToOne({ entity: () => FooBar2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: IdentifiedReference<FooBar2>;

  @Property({ defaultRaw: \`CURRENT_TIMESTAMP\` })
  version!: Date;

  @Property({ length: 65535, nullable: true })
  blob?: Buffer;

  @Property({ length: 65535, nullable: true })
  blob2?: Buffer;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  array?: string;

  @Property({ columnType: 'json', nullable: true })
  objectProperty?: any;

  @OneToOne({ entity: () => Test2, wrappedReference: true, mappedBy: 'fooBar' })
  fooBarInverse?: IdentifiedReference<Test2>;

  @OneToMany({ entity: () => FooParam2, mappedBy: 'bar' })
  barInverse = new Collection<FooParam2>(this);

  @ManyToMany({ entity: () => Test2, mappedBy: 'bars' })
  barsInverse = new Collection<Test2>(this);

}
",
  "import { Collection, Entity, OneToMany, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooParam2 } from './FooParam2';

@Entity()
export class FooBaz2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

  @OneToMany({ entity: () => FooParam2, mappedBy: 'baz' })
  bazInverse = new Collection<FooParam2>(this);

}
",
  "import { Entity, IdentifiedReference, ManyToOne, OptionalProps, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [OptionalProps]?: 'version';

  @ManyToOne({ entity: () => FooBar2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  bar!: IdentifiedReference<FooBar2>;

  @ManyToOne({ entity: () => FooBaz2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  baz!: IdentifiedReference<FooBaz2>;

  @Property({ length: 255 })
  value!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Collection, Entity, Enum, OneToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Enum({ items: () => Publisher2Type })
  type!: Publisher2Type;

  @Enum({ items: () => Publisher2Type2 })
  type2!: Publisher2Type2;

  @Property({ columnType: 'tinyint', nullable: true })
  enum1?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum2?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

  @Enum({ items: () => Publisher2Enum5, nullable: true })
  enum5?: Publisher2Enum5;

  @OneToMany({ entity: () => Book2, mappedBy: 'publisher' })
  publisherInverse = new Collection<Book2>(this);

  @OneToMany({ entity: () => Publisher2Tests, mappedBy: 'publisher2' })
  publisher2Inverse = new Collection<Publisher2Tests>(this);

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher2!: IdentifiedReference<Publisher2>;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: IdentifiedReference<Test2>;

}
",
  "import { Collection, Entity, ManyToMany, PrimaryKey, Property } from '@mikro-orm/core';
import { User2 } from './User2';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property()
  price!: number;

  @ManyToMany({ entity: () => User2, mappedBy: 'sandwiches' })
  sandwichesInverse = new Collection<User2>(this);

}
",
  "import { Collection, Entity, IdentifiedReference, ManyToMany, ManyToOne, OneToMany, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { FooBar2 } from './FooBar2';
import { Publisher2Tests } from './Publisher2Tests';

@Entity()
export class Test2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255, nullable: true })
  name?: string;

  @OneToOne({ entity: () => Book2, wrappedReference: true, onDelete: 'set null', nullable: true })
  book?: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  parent?: IdentifiedReference<Test2>;

  @Property({ default: 1 })
  version: number = 1;

  @OneToOne({ entity: () => FooBar2, wrappedReference: true, fieldName: 'foo___bar', onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: IdentifiedReference<FooBar2>;

  @Property({ fieldName: 'foo___baz', nullable: true })
  fooBaz?: number;

  @ManyToMany({ entity: () => FooBar2, joinColumn: 'test2_id', inverseJoinColumn: 'foo_bar2_id' })
  bars = new Collection<FooBar2>(this);

  @OneToMany({ entity: () => Configuration2, mappedBy: 'test' })
  testInverse = new Collection<Configuration2>(this);

  @OneToMany({ entity: () => Publisher2Tests, mappedBy: 'test2' })
  test2Inverse = new Collection<Publisher2Tests>(this);

  @OneToMany({ entity: () => Test2, mappedBy: 'parent' })
  parentInverse = new Collection<Test2>(this);

}
",
  "import { Collection, Entity, IdentifiedReference, ManyToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
export class User2 {

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ nullable: true })
  foo?: number;

  @OneToOne({ entity: () => Car2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteCar?: IdentifiedReference<Car2>;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator generate entities with reference wrappers and named import [mysql]: mysql-entity-named-dump 1`] = `
[
  "import { Entity, IdentifiedReference, OneToOne, Property } from '@mikro-orm/core';
import { Author2 } from './Author2.js';

@Entity()
export class Address2 {

  @OneToOne({ entity: () => Author2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade', primary: true })
  author!: IdentifiedReference<Author2>;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Collection, Entity, IdentifiedReference, Index, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2.js';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  [OptionalProps]?: 'createdAt' | 'termsAccepted' | 'updatedAt';

  @PrimaryKey()
  id!: number;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  updatedAt!: Date;

  @Index({ name: 'custom_idx_name_123' })
  @Property({ length: 255 })
  name!: string;

  @Index({ name: 'custom_email_index_name' })
  @Unique({ name: 'custom_email_unique_name' })
  @Property({ length: 255 })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Index({ name: 'author2_terms_accepted_index' })
  @Property({ default: false })
  termsAccepted: boolean = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  identities?: string;

  @Index({ name: 'author2_born_index' })
  @Property({ columnType: 'date', nullable: true })
  born?: string;

  @Index({ name: 'born_time_idx' })
  @Property({ columnType: 'time', nullable: true })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, wrappedReference: true, onDelete: 'cascade', nullable: true })
  favouriteBook?: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => Author2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteAuthor?: IdentifiedReference<Author2>;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, Enum, IdentifiedReference, Index, ManyToOne, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Index({ name: 'base_user2_type_index' })
  @Enum({ items: () => BaseUser2Type })
  type!: BaseUser2Type;

  @Property({ length: 255, nullable: true })
  ownerProp?: string;

  @ManyToOne({ entity: () => BaseUser2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteEmployee?: IdentifiedReference<BaseUser2>;

  @OneToOne({ entity: () => BaseUser2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteManager?: IdentifiedReference<BaseUser2>;

  @Property({ nullable: true })
  employeeProp?: number;

  @Property({ length: 255, nullable: true })
  managerProp?: string;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey({ columnType: 'bigint' })
  id!: string;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, IdentifiedReference, Index, ManyToMany, ManyToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Author2 } from './Author2.js';
import { BookTag2 } from './BookTag2.js';
import { Publisher2 } from './Publisher2.js';

@Entity()
export class Book2 {

  [OptionalProps]?: 'createdAt';

  @PrimaryKey({ length: 36 })
  uuidPk!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  createdAt!: Date;

  @Index({ name: 'book2_title_index' })
  @Property({ length: 255, nullable: true })
  title?: string;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  perex?: string;

  @Property({ columnType: 'decimal(8,2)', nullable: true })
  price?: string;

  @Property({ columnType: 'double', nullable: true })
  double?: string;

  @Property({ columnType: 'json', nullable: true })
  meta?: any;

  @ManyToOne({ entity: () => Author2, wrappedReference: true })
  author!: IdentifiedReference<Author2>;

  @ManyToOne({ entity: () => Publisher2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade', nullable: true })
  publisher?: IdentifiedReference<Publisher2>;

  @Property({ length: 255, nullable: true, default: 'lol' })
  foo?: string;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Book2 } from './Book2.js';
import { BookTag2 } from './BookTag2.js';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  book2!: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => BookTag2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  bookTag2!: IdentifiedReference<BookTag2>;

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2.js';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @ManyToOne({ entity: () => Car2, wrappedReference: true, onUpdateIntegrity: 'cascade' })
  car!: IdentifiedReference<Car2>;

}
",
  "import { Entity, Index, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Car2 {

  @Index({ name: 'car2_name_index' })
  @PrimaryKey({ length: 100 })
  name!: string;

  @Index({ name: 'car2_year_index' })
  @PrimaryKey()
  year!: number;

  @Property()
  price!: number;

}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Test2 } from './Test2.js';

@Entity()
export class Configuration2 {

  @PrimaryKey({ length: 255 })
  property!: string;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  test!: IdentifiedReference<Test2>;

  @Property({ length: 255 })
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Entity, IdentifiedReference, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2.js';

@Entity()
export class FooBar2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ fieldName: 'name with space', length: 255, nullable: true })
  nameWithSpace?: string;

  @OneToOne({ entity: () => FooBaz2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  baz?: IdentifiedReference<FooBaz2>;

  @OneToOne({ entity: () => FooBar2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: IdentifiedReference<FooBar2>;

  @Property({ defaultRaw: \`CURRENT_TIMESTAMP\` })
  version!: Date;

  @Property({ length: 65535, nullable: true })
  blob?: Buffer;

  @Property({ length: 65535, nullable: true })
  blob2?: Buffer;

  @Property({ columnType: 'text', length: 65535, nullable: true })
  array?: string;

  @Property({ columnType: 'json', nullable: true })
  objectProperty?: any;

}
",
  "import { Entity, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, IdentifiedReference, ManyToOne, OptionalProps, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2.js';
import { FooBaz2 } from './FooBaz2.js';

@Entity()
export class FooParam2 {

  [OptionalProps]?: 'version';

  @ManyToOne({ entity: () => FooBar2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  bar!: IdentifiedReference<FooBar2>;

  @ManyToOne({ entity: () => FooBaz2, wrappedReference: true, onUpdateIntegrity: 'cascade', primary: true })
  baz!: IdentifiedReference<FooBaz2>;

  @Property({ length: 255 })
  value!: string;

  @Property({ length: 3, defaultRaw: \`current_timestamp(3)\` })
  version!: Date;

}
",
  "import { Entity, Enum, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Enum({ items: () => Publisher2Type })
  type!: Publisher2Type;

  @Enum({ items: () => Publisher2Type2 })
  type2!: Publisher2Type2;

  @Property({ columnType: 'tinyint', nullable: true })
  enum1?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum2?: number;

  @Property({ columnType: 'tinyint', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

  @Enum({ items: () => Publisher2Enum5, nullable: true })
  enum5?: Publisher2Enum5;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}

export enum Publisher2Enum5 {
  A = 'a',
}
",
  "import { Entity, IdentifiedReference, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2.js';
import { Test2 } from './Test2.js';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  publisher2!: IdentifiedReference<Publisher2>;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'cascade' })
  test2!: IdentifiedReference<Test2>;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property({ length: 255 })
  name!: string;

  @Property()
  price!: number;

}
",
  "import { Collection, Entity, IdentifiedReference, ManyToMany, ManyToOne, OneToOne, OptionalProps, PrimaryKey, Property } from '@mikro-orm/core';
import { Book2 } from './Book2.js';
import { FooBar2 } from './FooBar2.js';

@Entity()
export class Test2 {

  [OptionalProps]?: 'version';

  @PrimaryKey()
  id!: number;

  @Property({ length: 255, nullable: true })
  name?: string;

  @OneToOne({ entity: () => Book2, wrappedReference: true, onDelete: 'set null', nullable: true })
  book?: IdentifiedReference<Book2>;

  @ManyToOne({ entity: () => Test2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  parent?: IdentifiedReference<Test2>;

  @Property({ default: 1 })
  version: number = 1;

  @OneToOne({ entity: () => FooBar2, wrappedReference: true, fieldName: 'foo___bar', onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  fooBar?: IdentifiedReference<FooBar2>;

  @Property({ fieldName: 'foo___baz', nullable: true })
  fooBaz?: number;

  @ManyToMany({ entity: () => FooBar2, joinColumn: 'test2_id', inverseJoinColumn: 'foo_bar2_id' })
  bars = new Collection<FooBar2>(this);

}
",
  "import { Collection, Entity, IdentifiedReference, ManyToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2.js';
import { Sandwich } from './Sandwich.js';

@Entity()
export class User2 {

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ nullable: true })
  foo?: number;

  @OneToOne({ entity: () => Car2, wrappedReference: true, onUpdateIntegrity: 'cascade', onDelete: 'set null', nullable: true })
  favouriteCar?: IdentifiedReference<Car2>;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator numeric nullable columns with null default [mariadb]: mariadb-entity-gh-3285 1`] = `
[
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Vrf {

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  vrfId?: number;

  @Property({ length: 150, nullable: true })
  comments?: string;

  @Property({ nullable: true, defaultRaw: \`current_timestamp()\` })
  createdAt?: Date;

  @Property({ nullable: true, defaultRaw: \`current_timestamp()\` })
  updatedAt?: Date;

}
",
]
`;

exports[`EntityGenerator numeric nullable columns with null default [mysql]: mysql-entity-gh-3285 1`] = `
[
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Vrf {

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  vrfId?: number;

  @Property({ length: 150, nullable: true })
  comments?: string;

  @Property({ nullable: true, defaultRaw: \`CURRENT_TIMESTAMP\` })
  createdAt?: Date;

  @Property({ nullable: true, defaultRaw: \`CURRENT_TIMESTAMP\` })
  updatedAt?: Date;

}
",
]
`;

exports[`EntityGenerator table name starting with number [mysql]: mysql-entity-dump-number 1`] = `
[
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity({ tableName: '123_table_name' })
export class E123TableName {

  @PrimaryKey()
  id!: number;

}
",
]
`;

exports[`EntityGenerator table name with underscore using entitySchema [mysql]: mysql-entity-dump-underscore-entity-schema 1`] = `
[
  "import { EntitySchema } from '@mikro-orm/core';

export class E123TableName {
  id!: number;
}

export const E123TableNameSchema = new EntitySchema({
  class: E123TableName,
  tableName: '123_table_name',
  properties: {
    id: { primary: true, type: 'number' },
  },
});
",
]
`;
